assets/css/style.css
/* add Google Fonts */
@import url('https://fonts.googleapis.com/css2?family=Cousine:ital,wght@0,400;0,700;1,400;1,700&family=Fira+Mono:wght@400;500;700&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap');

/* wildcard selector to override browser defaults */
* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}

/* generic style */
body {
    min-height: 100vh;
    display: flex;
    flex-direction: column;
    color: black;
    font-family: 'Roboto Mono', sans-serif;

}

/* header element */
header {
    background-color: #F6F188;
    padding: 10px 10px;
    position: fixed;
    width: 100%;
    z-index: 10;
    box-shadow: 0 2px 4px #000000;


}

header>div {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

header>div>span {
    display: inline-block;
    align-items: center;
    justify-content: center;
}

h1 {
    font-family: 'Fira Mono', sans-serif;
    /*font-size: 90%;*/
}

header h1 {
    letter-spacing: 2px;
}

#logo {
    text-decoration: none;
    color: #9A0431;
}

/*styling for nav bar options */
#menu {
    font-size: 110%;
    font-family: 'Cousine', sans-serif;
    letter-spacing: 2px;
    list-style-type: none;
    line-height: 35px;
}

#menu>li>a {
    text-decoration: none;
    color: #9A0431
}

/* active-page class tells user where they are in the website when looking at nav bar */
.active-page {
    border-bottom: 1px solid #9A0431;
}

nav {
    position: absolute;
    background-color: #F6F188;
    width: 100%;
    box-shadow: 0 2px 2px #000000;
    left: 0;
    padding: 0 1rem;
    display: none;
    top: 100%;

}

/* nav toggle */
#nav-toggle:checked~nav {
    display: block;
}

#nav-toggle {
    display: none;
    align-items: center;
}

.nav-toggle-label {
    display: flex;
    flex-direction: row;
    justify-content: flex-end;
    align-items: center;
    font-size: 300%;
    vertical-align: -100%;

}

/* main element */

main {
    /* flex set to keep footer down at bottom of page */
    flex-grow: 1;
    flex-shrink: 0;
    flex-basis: auto;
    margin-top: 50px;

}

/* hero section on index.html */
#hero {
    width: 100%;
    height: 75vh;
    background: url(../images/IMG-20240615-WA0010.jpg) no-repeat center center/cover;
    position: relative;
}

#text-on-hero-image > h2 {
    padding-top: 20px;
    font-family: 'Cousine', sans-serif;
    letter-spacing: 2px;
    color: #FFFFFF;
}

#text-on-hero-image {
    background-color: #007360;
    opacity: 50%;
    font-size: 140%;
    position: absolute;
    bottom: 30px;
    width: 80%;
    padding-left: 20px;
}

#about-us {
    display: flex;
    flex-wrap: wrap;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    
}

#about-us > div > h2 {
    background-color: #F6F188;
    color: #9A0431;
    text-align: center;
    padding: 10px;
    margin: 5px;
    margin-top: 10px;
    flex: 1 1 auto;
}

#about-us > div > img {
    /* max-width: 300px; */
    text-align:center;
    padding: 5px;
    margin: 5px;
    flex: 1 1 auto;
}

#about-us > div > p {
    flex: 1 1 auto;
    align-self: center;
    text-align: center;
    padding: 5px;
}

#about-us > div > a {
    flex: 1 1 auto;
    text-align: center;
    align-self: center;
    text-decoration: none;
    padding: 5px;
}

    /* Code snippet below is based on https://www.w3schools.com/css/css3_buttons.asp
    #menu>li>a:hover {
        text-decoration: underline solid #9A0431;
        background-color: #007360;
        color: #F6F188;
        transition-duration: 0.4s;
        padding: 5px 5px;
    }

    #social-media-links>li>a>i:hover {
        color: #9A0431;
        background-color: #F6F188;
        padding: 10px 10px;
        transition-duration: 0.4s;
    } */


/* footer element */
footer {
    background-color: #9A0431;
    color: #F6F188;
}

#social-media-links {
    padding: 20px 0;
    display: flex;
    justify-content: space-evenly;
    text-align: center;
    list-style-type: none;

}

#social-media-links a i {
    color: #F6F188;
    font-size: 170%;
    padding: 10px 10px;

}


/* The style rules below are relate to screens equal or greater than 768px in width.
For smaller tablets (768px to 812px), the navigation bar looks poor with the menu ID given a display:flex declaration, 
as per  the Code Institute's Love Running Walkthrough project. With my large, bold logo font, 
and the font and letter-spacing of the menu items, the resultant view is poor and jumbled (see bug fix 3 in the README.md
for more information on this). As such, I have written the CSS rules below so that display:flex is not applied to the menu ID 
element until the screen is 813px in width, at which point display:flex arrangement of the nav bar menu items 
looks acceptable.*/

@media screen and (min-width: 768px) {

    /* header element */

    header {
        box-shadow: none;
    }

    nav {
        display: block;
        position: relative;
        box-shadow: none;
        width: fit-content;

    }

    /* no need for nav-toggle-label if nav options are visible at this screen width */
    .nav-toggle-label {
        display: none;
    }

    /* padding to menu items so there's some room between them */
    #menu>li {
        padding-left: 20px;

    }



    main {
        margin-top: 120px;
    }
}

@media screen and (min-width: 813px) {
    #menu {
        display: flex;
    }

    main {
        margin-top: 55px;
    }

}

@media screen and (min-width: 992px) {

    /* Code snippet below is based on https://www.w3schools.com/css/css3_buttons.asp */
    #menu>li>a:hover {
        text-decoration: underline solid #9A0431;
        background-color: #007360;
        color: #F6F188;
        transition-duration: 0.4s;
        padding: 5px 5px;
    }

    #social-media-links>li>a>i:hover {
        color: #9A0431;
        background-color: #F6F188;
        padding: 10px 10px;
        transition-duration: 0.4s;
    }




}

